--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -84,44 +84,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AlgoRitmeWeek1.cpp" />
-    <ClCompile Include="Beestje.cpp" />
-    <ClCompile Include="BaseState.cpp" />
-    <ClCompile Include="Edge.cpp" />
-    <ClCompile Include="FindDrugsState.cpp" />
-    <ClCompile Include="FindBootState.cpp" />
     <ClCompile Include="FWApplication.cpp" />
-    <ClCompile Include="Haasje.cpp" />
-    <ClCompile Include="HuntState.cpp" />
-    <ClCompile Include="Koetje.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="NodeMap.cpp" />
-    <ClCompile Include="SleepState.cpp" />
-    <ClCompile Include="StateFactory.cpp" />
-    <ClCompile Include="WanderingState.cpp" />
+    <ClCompile Include="MovingEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SDL2.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AlgoRitmeWeek1.h" />
-    <ClInclude Include="Beestje.h" />
     <ClInclude Include="Config.h" />
-    <ClInclude Include="BaseState.hpp" />
-    <ClInclude Include="Edge.h" />
-    <ClInclude Include="FindDrugsState.hpp" />
-    <ClInclude Include="FindBootState.hpp" />
-    <ClInclude Include="FWApplication.h" />
-    <ClInclude Include="Haasje.h" />
-    <ClInclude Include="HuntState.hpp" />
-    <ClInclude Include="IGameObject.h" />
-    <ClInclude Include="Koetje.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="NodeMap.h" />
-    <ClInclude Include="SleepState.h" />
-    <ClInclude Include="StateFactory.hpp" />
-    <ClInclude Include="WanderingState.hpp" />
+    <ClInclude Include="MovingEntity.hpp" />
+    <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
