Cow en Rabbit toegevoegd, Steering behavoir class gemaakt, Methodes en variables aan de classes toegevoegd.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 *.exe
 *.out
 *.app
+Framework/SDLFramework/SDLFramework/Debug/vc120.pdb
+Framework/SDLFramework/SDLFramework/Debug/SDLFramework.log
+Framework/SDLFramework/SDLFramework.opensdf
+Framework/SDLFramework/Debug/SDLFramework.ilk
+Framework/SDLFramework/Debug/SDLFramework.pdb
