--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj
@@ -97,9 +97,12 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="CowEntity.h" />
+    <ClInclude Include="C2DMatrix.h" />
     <ClInclude Include="MovingEntity.hpp" />
     <ClInclude Include="RabbitEntity.h" />
     <ClInclude Include="SteeringBehaviors.h" />
+    <ClInclude Include="Transformations.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
