--- a/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj.filters
+++ b/Framework/SDLFramework/SDLFramework/SDLFramework.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="SteeringBehaviors.cpp">
       <Filter>Source Files\Steering</Filter>
     </ClCompile>
+    <ClCompile Include="GameWorld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="SDL2.dll" />
@@ -71,6 +74,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C2DMatrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FWApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameWorld.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IGameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
